--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,38 +1,15 @@
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light sticky" id="mainNav">
-  <div class="container-fluid">
-    <a class="navbar-brand" routerLink="./">
-      <img src="https://dh2dlbjd2qx17.cloudfront.net/img/tut-logo.png" alt="" width="260" height="80" style="padding: auto;">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky" id="mainNav" style="z-index: 10;">
+    <div class="container-fluid">
+        <a class="navbar-brand" routerLink="./">
+            <img src="https://dh2dlbjd2qx17.cloudfront.net/img/tut-logo.png" alt="" width="260" height="80" style="padding: auto;">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      
-      <!-- <ul class="navbar-nav me-auto" style="margin-left: 20px;">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="./" >Home |</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="./blog">Blog </a>
-        </li>
-      </ul>
+        <div class="collapse navbar-collapse" id="navbarNav">
 
-      <div class>
-        <ul class="navbar-nav ms-auot">
-          <li><a class="nav-link" id="sign-up" (click)="logout()">Logout</a></li>
-        </ul>
-        </div> -->
-
-     <!-- 
-
-    <a routerLink="./student-reg">
-      <img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-512.png" alt="" width="30" height="30" style="padding: auto;"> 
-    </a>
-    -->
-
+        </div>
     </div>
-  </div>
 </nav>
 
 <router-outlet></router-outlet>
