--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
-<div class="footer">
+<div class="footer" style="z-index: 10;">
     <p> <small> &copy; 2022 Tshwane University of Technology. All Rights Reserved.</small> </p>
 </div>
