--- a/src/app/campus/campus.component.css
+++ b/src/app/campus/campus.component.css
@@ -1,3 +1,20 @@
+.mat-button-toggle-checked {
+  box-shadow: 2px 2px 2px 2px rgb(255, 255, 255) !important;
+  border: 1px rgb(245, 208, 0) solid !important;
+  border-radius: 5px !important;
+  background-color: #0d4794 !important;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+
+}
+mat-button-toggle {
+  border: 1px rgba(0,0,0,0) solid !important;
+  margin-top: 0px !important;
+  padding: 0 5px !important;
+  z-index: 3 !important; 
+  color: rgb(0, 0, 0);
+}
+
 .page-container {
     padding-top: 30px;
     margin-left: 5%;
