--- a/src/app/campus/campus.component.html
+++ b/src/app/campus/campus.component.html
@@ -17,10 +17,9 @@
     </button>
     <mat-menu #menu="matMenu" yPosition="above">
         <button mat-menu-item style="font-size: large;background-color: #0d4794;color: white">{{usernames}} 
-            <!-- <mat-icon>assignment</mat-icon> -->
         </button>
-        <button mat-menu-item>Get Your cetificate  
-            <mat-icon>assignment_turned_in</mat-icon>
+        <button mat-menu-item [disabled]="complete===0"><a href={{url}}   >Get Your Cetificate</a>  
+            <mat-icon >assignment_turned_in</mat-icon>
         </button>
         <button (click)="campDirection()" mat-menu-item>Campus Directions 
             <mat-icon>room</mat-icon>
