--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -150,7 +150,7 @@
                         <div class="card shadow mb-4">
                             <!-- Card Header - Dropdown -->
                             <div class="card-header py-4 d-flex flex-row align-items-center justify-content-between">
-                                <h6 class="m-0 font-weight-bold text-primary">Students Comparisons</h6>
+                                <h6 class="m-0 font-weight-bold text-primary">Campuses with most Students</h6>
                             </div>
                             <!-- Card Body -->
                             <div class="card-body" style="margin-bottom: 4%;">
