--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -23,12 +23,12 @@
 
     <!-- Nav Item - Pages Collapse Menu -->
     
-    <li [class]="classNameNav[1]">
+    <!-- <li [class]="classNameNav[1]">
         <a class="nav-link" (click)="navLinkHandle(1,'/generate-report')">
             <mat-icon >picture_as_pdf</mat-icon>
             <span class="textAlign">Generate Report</span>
         </a>
-    </li>
+    </li> -->
 
     <li [class]="classNameNav[2]">
         <a class="nav-link" (click)="navLinkHandle(2,'/track-student')">
