--- a/src/app/admin/topbar/topbar.component.html
+++ b/src/app/admin/topbar/topbar.component.html
@@ -10,10 +10,12 @@
     <form
         class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
         <div class="input-group">
-            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
-                aria-label="Search" aria-describedby="basic-addon2">
+            
+            <input [formControl]="searchControl"  type="text"  class="form-control bg-light border-0 small" placeholder="Search for..."
+                aria-label="Search" aria-describedby="basic-addon2" >
+
             <div class="input-group-append">
-                <button class="btn btn-primary"  type="button">
+                <button class="btn btn-primary"  type="button" (click)="search()">
                     <mat-icon style="margin-top: 20%;">search</mat-icon>
                 </button>
             </div>
