--- a/src/app/admin/sideTabs/tracking-st/tracking-st.component.html
+++ b/src/app/admin/sideTabs/tracking-st/tracking-st.component.html
@@ -34,7 +34,7 @@
 
                 <mat-form-field appearance="outline" style="width: 30%;">
                     <mat-label>Search</mat-label>
-                    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. 217070" #input>
+                    <input matInput (keyup)="ApplyFilter($event)" placeholder="Ex. 217070" #input>
                     <mat-icon matSuffix>search</mat-icon>
                 </mat-form-field>
 
@@ -113,7 +113,7 @@
 
                         <!-- Row shown when there is no matching data. -->
                         <tr class="mat-row" *matNoDataRow>
-                            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+                            <td class="mat-cell" colspan="4">No data matching the filter </td>
                         </tr>
                     </table>
 
