--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
                 <div class="d-sm-flex align-items-center justify-content-between mb-4">
                     <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
                     <a (click)="upload()" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
-                        <mat-icon style="position: absolute;">autorenew</mat-icon>
+                        <mat-icon [@rotatedState]="state" style="position: absolute;">autorenew</mat-icon>
                         <span style="margin-left: 30px;">Refresh Analytics</span>
                     </a>
                 </div>
@@ -150,7 +150,7 @@
                         <div class="card shadow mb-4">
                             <!-- Card Header - Dropdown -->
                             <div class="card-header py-4 d-flex flex-row align-items-center justify-content-between">
-                                <h6 class="m-0 font-weight-bold text-primary">Students Comparisons</h6>
+                                <h6 class="m-0 font-weight-bold text-primary">Campuses with most Students</h6>
                             </div>
                             <!-- Card Body -->
                             <div class="card-body" style="margin-bottom: 4%;">
