--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -11,7 +11,7 @@
                 <img mat-card-image [src]="blog.path" alt="T-Res Image">
                 <mat-card-content>
                     <p>{{blog.description}}
-                        <a [href]="blog.link" target="_blank"><span class="redirect-link" > Learn more about {{blog.title}} here.</span></a>
+                        <a [href]="blog.link" target="_blank"><span class="redirect-link" > Link to {{blog.title}}</span></a>
                     </p>
                 </mat-card-content>
                 <div>
