--- a/src/app/student/register/register.component.html
+++ b/src/app/student/register/register.component.html
@@ -1,5 +1,5 @@
 <img src="../../../assets/img/ori31 (26 of 32).jpg" style="z-index: -2;object-fit: cover;position: absolute;width: 100%;height: 100vh;">
-<div class="heading" style=" text-align: center;line-height: 0.8;text-shadow: 2px 2px #0d4794; color: rgb(255, 255, 255);display: flex; justify-content: center;font-size: 4vw;font-weight:500;margin-top: 5%; margin-bottom: 5%;">TUT Online Orientation</div>
+<div class="heading" style=" text-align: center;line-height: 0.8;text-shadow: 2px 2px #0d4794; color: rgb(255, 255, 255);display: flex; justify-content: center;font-size: 2vw;font-weight:600;margin-top: 2%; margin-bottom: 2%;">TUT Online Orientation</div>
 
 <div *ngIf="!stepTwo" class="container page-container" style="background-color: white;width: 30rem;border-radius: 25px;margin-top: 2%;box-shadow: 10px 24px 70px -18px rgba(0, 0, 0, 0.32);">
 
@@ -22,12 +22,12 @@
                 <label for="exampleInputEmail1">Last name</label>
                 <input type="email" class="form-control" id="exampleInputLastname" placeholder="Enter your last name" name="lastName" [(ngModel)]="lastName" required>
             </div> 
-
+                <!--
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email" name="email" [(ngModel)]="email" required>
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-            </div>
+            </div>-->
 
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
