--- a/src/app/campus/campus.component.css
+++ b/src/app/campus/campus.component.css
@@ -5,14 +5,19 @@
   background-color: #0d4794 !important;
   color: rgb(255, 255, 255);
   font-weight: bold;
-
+}
+mat-button-toggle-group {
+  flex-wrap: wrap;  
 }
 mat-button-toggle {
-  border: 1px rgba(0,0,0,0) solid !important;
+  border: 1px rgba(0, 0, 0, 0.5) solid !important;
+  border-radius: 5px !important;
   margin-top: 0px !important;
-  padding: 0 5px !important;
+  padding: 0 1px !important;
   z-index: 3 !important; 
   color: rgb(0, 0, 0);
+  /**/
+
 }
 
 .page-container {
