--- a/src/app/student/register/register.component.html
+++ b/src/app/student/register/register.component.html
@@ -11,7 +11,7 @@
         <form>
             <div class="form-group">
                 <label for="exampleInputEmail1">Student Number</label>
-                <input type="email"  class="form-control" id="exampleInputStudNum" placeholder="Enter your student number" name="studNum" [(ngModel)]="studNum" required>
+                <input type="email" maxlength="9" minlength="9" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" class="form-control" id="exampleInputStudNum" placeholder="Enter your student number" name="studNum" [(ngModel)]="studNum" required>
             </div>
              <div class="form-group">
                 <label for="exampleInputEmail1">First name</label>
@@ -31,7 +31,7 @@
 
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control"  id="exampleInputPassword1" placeholder="Enter your password" name="password" [(ngModel)]="password" required>
+                <input type="password" minlength="6" class="form-control"  id="exampleInputPassword1" placeholder="Enter your password" name="password" [(ngModel)]="password" required>
             </div>
 
             <div class="form-group">
