--- a/src/app/student/register/register.component.html
+++ b/src/app/student/register/register.component.html
@@ -23,11 +23,11 @@
                 <input type="email" class="form-control" id="exampleInputLastname" placeholder="Enter your last name" name="lastName" [(ngModel)]="lastName" required>
             </div> 
 
-            <div class="form-group">
+           <!-- <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email" name="email" [(ngModel)]="email" required>
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-            </div>
+            </div>-->
 
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
