--- a/src/app/student/register/register.component.html
+++ b/src/app/student/register/register.component.html
@@ -11,7 +11,8 @@
         <form>
             <div class="form-group">
                 <label for="exampleInputEmail1">Student Number</label>
-                <input type="email"  class="form-control" id="exampleInputStudNum" placeholder="Enter your student number" name="studNum" [(ngModel)]="studNum" required>
+                <input type="email" maxlength="9" minlength="9" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" class="form-control" id="exampleInputStudNum" placeholder="Enter your student number" name="studNum" [(ngModel)]="studNum" required>
+                <small style="color: red;">NB! Your student number will also be your student e-mail<br> it will look like 225489768@tut4life.ac.za</small>
             </div>
              <div class="form-group">
                 <label for="exampleInputEmail1">First name</label>
@@ -31,7 +32,7 @@
 
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control"  id="exampleInputPassword1" placeholder="Enter your password" name="password" [(ngModel)]="password" required>
+                <input type="password" pattern="/^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,10}$/" class="form-control"  id="exampleInputPassword1" placeholder="Enter your password" name="password" [(ngModel)]="password" required>
             </div>
 
             <div class="form-group">
@@ -58,7 +59,7 @@
             <div class="form-group">
                 <label for="exampleInputEmail1">One Time Pin</label>
                 <input type="text" class="form-control" id="otp" aria-describedby="emailHelp" placeholder="Enter OTP" name="otp" [(ngModel)]="otpField" required>
-                <small id="emailHelp" class="form-text text-muted">Do not share the OTP with anyone else.</small>
+                <small style="color:red;" id="emailHelp" ><br> CLICK HERE to access your student e-mail >> <a style="font-weight: bold;" href="https://outlook.office.com/mail"target="_blank">Student e-mail</a>.</small>
             </div>
 
             <button type="submit" style="margin-left: 35%; margin-top: 7%;margin-bottom: -9%;" class="btn btn-primary" (click)="register()">Register</button>
