restrict to only letters on user name & lastname

--- a/src/app/student/sign-in/sign-in.component.html
+++ b/src/app/student/sign-in/sign-in.component.html
@@ -9,7 +9,7 @@
 
             <div class="wrapper fadeInDown">
                 <div id="formContent" style="border-radius: 25px; padding-left: 2%;padding-right: 2%;">
-                    <h1 class="sec-title" style="margin-top: 5%;margin-bottom: 15%;"> Sign in </h1>
+                    <h1 class="sec-title" style="margin-top: 5%;margin-bottom: 10%;"> Sign in </h1>
                     <!-- Tabs Titles -->
 
                     <!-- Icon -->
@@ -23,15 +23,17 @@
                     <form #myForm="ngForm">
 
                         <div class="form-group">
-                            <label style="text-align: left;width:85%;font-size: medium;" for="username">Email</label>
+                            <label style="text-align: left;width:85%;font-size: medium; font-weight: bold;" for="username">Username</label>
                             <input style="text-align: left;font-size: 1.2rem;" placeholder="Enter Email" type="email" class="form-control" name="email" [(ngModel)]="email" required>
+                            <small style="color: red;"> <br>NB! Your username is your student number then add @tut4life.ac.za<br> it should look like e.g 225489768@tut4life.ac.za</small>
+
                             <div class="invalid-feedback">
                                 <div>Username is required</div>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label style="text-align: left;width:85%;font-size: medium;" for="password">Password</label>
+                            <label style="text-align: left;width:85%;font-size: medium; font-weight: bold;" for="password">Password</label>
                             <input style="text-align: left;font-size: 1.2rem;" placeholder="Enter Password" type="password" class="form-control" name="password" [(ngModel)]="password" required/>
                             <div class="invalid-feedback">
                                 <div>Password is required</div>
@@ -47,10 +49,10 @@
 
 
 
-                    <div id="formFooter" style="border-radius: 25px;margin-top: 20%;background-color: white;">
+                    <div id="formFooter" style="border-radius: 25px;margin-top: 05%;background-color: white;">
                         <a class="underlineHover" (click)="fogotClicked()"><span class="text-danger">I forgot my password</span></a>
                         <p> </p>
-                        <button class="button" style="width: 70%; margin-top: 20px;border-radius: 15px;" routerLink="/student-reg"> Sign up </button>
+                        <button class="button" style="width: 70%; margin-top: 10px;border-radius: 15px;" routerLink="/student-reg"> Sign up </button>
                     </div>
                 </div>
             </div>
