--- a/src/app/student/register/register.component.html
+++ b/src/app/student/register/register.component.html
@@ -16,12 +16,12 @@
             </div>
              <div class="form-group">
                 <label for="exampleInputEmail1">First name</label>
-                <input type="email" class="form-control" id="exampleInputFirstname" placeholder="Enter your first name" name="firstName" [(ngModel)]="firstName" required>
+                <input type="email" onkeypress="return /[a-z]/i.test(event.key)" class="form-control" id="exampleInputFirstname" placeholder="Enter your first name" name="firstName" [(ngModel)]="firstName" required>
             </div>
 
             <div class="form-group">
                 <label for="exampleInputEmail1">Last name</label>
-                <input type="email" class="form-control" id="exampleInputLastname" placeholder="Enter your last name" name="lastName" [(ngModel)]="lastName" required>
+                <input type="email"onkeypress="return /[a-z]/i.test(event.key)" class="form-control" id="exampleInputLastname" placeholder="Enter your last name" name="lastName" [(ngModel)]="lastName" required>
             </div> 
 
            <!-- <div class="form-group">
@@ -32,7 +32,7 @@
 
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
-                <input type="password" pattern="/^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,10}$/" class="form-control"  id="exampleInputPassword1" placeholder="Enter your password" name="password" [(ngModel)]="password" required>
+                <input type="password"  class="form-control"  id="exampleInputPassword1" placeholder="Enter your password" name="password" [(ngModel)]="password" required>
             </div>
 
             <div class="form-group">
