--- a/src/app/student/register/register.component.html
+++ b/src/app/student/register/register.component.html
@@ -32,6 +32,7 @@
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
                 <input type="password" minlength="6" class="form-control"  id="exampleInputPassword1" placeholder="Enter your password" name="password" [(ngModel)]="password" required>
+                <small style="color: red;"> Password must have atleast 6 characters = 1 special character, 1 UPPERCASE, 1 lowercase & 1 number</small>
             </div>
 
             <div class="form-group">
