--- a/src/app/student/register/register.component.html
+++ b/src/app/student/register/register.component.html
@@ -15,12 +15,12 @@
             </div>
              <div class="form-group">
                 <label for="exampleInputEmail1">First name</label>
-                <input type="email" class="form-control" id="exampleInputFirstname" placeholder="Enter your first name" name="firstName" [(ngModel)]="firstName" required>
+                <input type="email" onkeypress="return /[a-z]/i.test(event.key)" class="form-control" id="exampleInputFirstname" placeholder="Enter your first name" name="firstName" [(ngModel)]="firstName" required>
             </div>
 
             <div class="form-group">
                 <label for="exampleInputEmail1">Last name</label>
-                <input type="email" class="form-control" id="exampleInputLastname" placeholder="Enter your last name" name="lastName" [(ngModel)]="lastName" required>
+                <input type="email" onkeypress="return /[a-z]/i.test(event.key)" class="form-control" id="exampleInputLastname" placeholder="Enter your last name" name="lastName" [(ngModel)]="lastName" required>
             </div> 
                 <!--
             <div class="form-group">
