--- a/src/app/student/register/register.component.html
+++ b/src/app/student/register/register.component.html
@@ -14,13 +14,13 @@
                 <input type="email" maxlength="9" minlength="9" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" class="form-control" id="exampleInputStudNum" placeholder="Enter your student number" name="studNum" [(ngModel)]="studNum" required>
             </div>
              <div class="form-group">
-                <label for="exampleInputEmail1">First name</label>
-                <input type="email" onkeypress="return /[a-z]/i.test(event.key)" class="form-control" id="exampleInputFirstname" placeholder="Enter your first name" name="firstName" [(ngModel)]="firstName" required>
+                <label for="exampleInputEmail1">First name(s)</label>
+                <input type="email" onkeypress="return /[a-z, ]/i.test(event.key)" class="form-control" id="exampleInputFirstname" placeholder="Enter your first name" name="firstName" [(ngModel)]="firstName" required>
             </div>
 
             <div class="form-group">
                 <label for="exampleInputEmail1">Last name</label>
-                <input type="email" onkeypress="return /[a-z]/i.test(event.key)" class="form-control" id="exampleInputLastname" placeholder="Enter your last name" name="lastName" [(ngModel)]="lastName" required>
+                <input type="email" onkeypress="return /[a-z, -]/i.test(event.key)" class="form-control" id="exampleInputLastname" placeholder="Enter your last name" name="lastName" [(ngModel)]="lastName" required>
             </div> 
                 <!--
             <div class="form-group">
