--- a/src/app/student/register/register.component.html
+++ b/src/app/student/register/register.component.html
@@ -11,35 +11,30 @@
         <form>
             <div class="form-group">
                 <label for="exampleInputEmail1">Student Number</label>
-                <input type="email" maxlength="9" minlength="9" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" class="form-control" id="exampleInputStudNum" placeholder="Enter your student number" name="studNum" [(ngModel)]="studNum" required>
+                <input type="email" maxlength="9" minlength="9" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" class="form-control" id="exampleInputStudNum" placeholder="Enter your student number" name="studNum" [(ngModel)]="studNum"
+                    required>
                 <small style="color: red;">NB! Your student number will also be your student e-mail<br> it will look like 225489768@tut4life.ac.za</small>
             </div>
-             <div class="form-group">
+            <div class="form-group">
                 <label for="exampleInputEmail1">First name</label>
                 <input type="email" onkeypress="return /[a-z]/i.test(event.key)" class="form-control" id="exampleInputFirstname" placeholder="Enter your first name" name="firstName" [(ngModel)]="firstName" required>
             </div>
 
             <div class="form-group">
                 <label for="exampleInputEmail1">Last name</label>
-                <input type="email"onkeypress="return /[a-z]/i.test(event.key)" class="form-control" id="exampleInputLastname" placeholder="Enter your last name" name="lastName" [(ngModel)]="lastName" required>
-            </div> 
-
-           <!-- <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email" name="email" [(ngModel)]="email" required>
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-            </div>-->
+                <input type="email" onkeypress="return /[a-z]/i.test(event.key)" class="form-control" id="exampleInputLastname" placeholder="Enter your last name" name="lastName" [(ngModel)]="lastName" required>
+            </div>
 
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
-                <input type="password"  class="form-control"  id="exampleInputPassword1" placeholder="Enter your password" name="password" [(ngModel)]="password" required>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter your password" name="password" [(ngModel)]="password" required>
                 <small style="color: red;"> Password must have atleast 6 characters = 1 special character, 1 UPPERCASE, 1 lowercase & 1 number</small>
 
             </div>
 
             <div class="form-group">
                 <label for="exampleInputPassword1">Confirm Password</label>
-                <input type="password" class="form-control"  id="exampleInputPassword2" placeholder="Confirm your password" name="password" [(ngModel)]="password2" required>
+                <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Confirm your password" name="password" [(ngModel)]="password2" required>
             </div>
 
             <button type="submit" style="margin-left: 35%; margin-top: 7%;margin-bottom: -9%;" class="btn btn-primary" (click)="sendOTP()">Next</button>
@@ -56,12 +51,12 @@
         <p style="padding-top: 5px; font-size: 13px;  text-align: center;"> Step 2/2 </p>
         <span *ngIf="error" (click)="removeError()">{{ error }}</span>
         <form>
-            
+
 
             <div class="form-group">
                 <label for="exampleInputEmail1">One Time Pin</label>
                 <input type="text" class="form-control" id="otp" aria-describedby="emailHelp" placeholder="Enter OTP" name="otp" [(ngModel)]="otpField" required>
-                <small style="color:red;" id="emailHelp" ><br> CLICK HERE to access your student e-mail >> <a style="font-weight: bold;" href="https://outlook.office.com/mail"target="_blank">Student e-mail</a>.</small>
+                <small style="color:red;" id="emailHelp"><br>To Access your student email <a style="font-weight: bold;" href="https://outlook.office.com/mail"target="_blank">Click here</a>.</small>
             </div>
 
             <button type="submit" style="margin-left: 35%; margin-top: 7%;margin-bottom: -9%;" class="btn btn-primary" (click)="register()">Register</button>
