--- a/src/app/student/sign-in/sign-in.component.html
+++ b/src/app/student/sign-in/sign-in.component.html
@@ -23,18 +23,19 @@
                     <form #myForm="ngForm">
 
                         <div class="form-group">
-                            <label style="text-align: left;width:85%;font-size: medium; font-weight: bold;" for="username">Username</label>
-                            <input style="text-align: left;font-size: 1.2rem;" placeholder="Enter Email" type="email" class="form-control" name="email" [(ngModel)]="email" required>
-                            <small style="color: red;"> <br>NB! Your username is your student number then add @tut4life.ac.za<br> it should look like e.g 225489768@tut4life.ac.za</small>
+                            <label style="text-align: left;width:85%;font-size: medium; font-weight: bold;" for="username">Student number</label>
+                            <input style="text-align: left;font-size: 1.2rem;" maxlength="9" minlength="9" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" placeholder="ex.217070554" type="email" class="form-control" name="email" [(ngModel)]="email"
+                                required>
 
                             <div class="invalid-feedback">
-                                <div>Username is required</div>
+                                <div>Student number is required</div>
                             </div>
                         </div>
 
+
                         <div class="form-group">
                             <label style="text-align: left;width:85%;font-size: medium; font-weight: bold;" for="password">Password</label>
-                            <input style="text-align: left;font-size: 1.2rem;" placeholder="Enter Password" type="password" class="form-control" name="password" [(ngModel)]="password" required/>
+                            <input style="text-align: left;font-size: 1.2rem;" placeholder="••••••••" type="password" class="form-control" name="password" [(ngModel)]="password" required/>
                             <div class="invalid-feedback">
                                 <div>Password is required</div>
                             </div>
