--- a/src/app/student/register/register.component.html
+++ b/src/app/student/register/register.component.html
@@ -28,7 +28,7 @@
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter your password" name="password" [(ngModel)]="password" required>
-                <small style="color: red;"> Password must have atleast 6 characters = 1 special character, 1 UPPERCASE, 1 lowercase & 1 number</small>
+                <small style="color: red;"> Password must have atleast 6 characters = 1 special character, 1 UPPERCASE, 1 lowercase [&] 1 number</small>
 
             </div>
 
@@ -56,7 +56,10 @@
             <div class="form-group">
                 <label for="exampleInputEmail1">One Time Pin</label>
                 <input type="text" class="form-control" id="otp" aria-describedby="emailHelp" placeholder="Enter OTP" name="otp" [(ngModel)]="otpField" required>
-                <small style="color:red;" id="emailHelp"><br>To Access your student email <a style="font-weight: bold;" href="https://outlook.office.com/mail"target="_blank">Click here</a>.</small>
+                <small style="color:red;" id="emailHelp">
+                    <br>To Access your student email 
+                    <a style="font-weight: bold;" href="https://outlook.office.com/mail" target="_blank">Click here</a>
+                </small>
             </div>
 
             <button type="submit" style="margin-left: 35%; margin-top: 7%;margin-bottom: -9%;" class="btn btn-primary" (click)="register()">Register</button>
