--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -8,7 +8,7 @@
                     <mat-card-title>{{blog.title}}</mat-card-title>
                     <mat-card-subtitle> {{blog.subTittle}} </mat-card-subtitle>
                 </mat-card-header>
-                <img mat-card-image [src]="blog.path" alt="T-Res Image">
+                <img mat-card-image [src]="blog.path" alt="Orientation Blog Image">
                 <mat-card-content>
                     <p>{{blog.description}}
                         <a [href]="blog.link" target="_blank"><span class="redirect-link" > Link to {{blog.title}}</span></a>
