--- a/src/app/admin/survey-responses/survey-responses.component.html
+++ b/src/app/admin/survey-responses/survey-responses.component.html
@@ -24,7 +24,7 @@
                 <!-- Page Heading -->
                 <div class="d-sm-flex align-items-center justify-content-between mb-4">
                     <h1 class="h3 mb-0 text-gray-800"> Survey Data</h1>
-                    <a routerLink="/dashboard" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" (click)="generateRep()">
+                    <a class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" (click)="generateRep()">
                         <mat-icon style="position: absolute;">picture_as_pdf</mat-icon>
                         <span style="margin-left: 30px;">Quick Generate Report</span>
                     </a>
@@ -38,9 +38,9 @@
 
                 <!-- picture_as_pdf -->
                 <div class="container">
-                    <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
+                    <table mat-table matTableFilter [exampleEntity]="filterEntity" [filterType]="filterType" [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8" matSort>
                         <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
-                            <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column}} </th>
                             <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
                         </ng-container>
 
